--- a/DS4P/si-c2s-xds/pom.xml
+++ b/DS4P/si-c2s-xds/pom.xml
@@ -18,7 +18,7 @@
 	<modules>
 		<module>common</module>
 		<module>bl</module>
-		<module>pg</module>
+		<!--module>pg</module-->
 	</modules>
 
 	<dependencies>
