--- a/FEiServices/policy-repository/pom.xml
+++ b/FEiServices/policy-repository/pom.xml
@@ -27,7 +27,7 @@
 		<!-- Policy Repository Properties -->
 		<Saxon-HE.version>9.6.0-4</Saxon-HE.version>
 		<modelmapper.version>0.7.3</modelmapper.version>
-		<herasaf-xacml-core.version>1.0.0.M3</herasaf-xacml-core.version>
+		<herasaf-xacml-core.version>1.0.3.RELEASE</herasaf-xacml-core.version>
 		<commons-io.version>1.3.2</commons-io.version>
 		<xmlunit.version>1.6</xmlunit.version>
 		<json-path-assert.version>1.2.0</json-path-assert.version>
